agreements preliminary version finished

--- a/assets/scripts/modules/rent-agreement/views/deposit-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/deposit-template.jade
@@ -5,7 +5,8 @@ form#deposit-form
         | Customer
         span.required(aria-required='true') *
       .col-md-12
-        input.form-control.width-150(type='text', name='deposit_customer', placeholder='search...')
+        input.form-control.width-150(type='hidden', name='deposit_customer', placeholder='search...')
+        input.form-control.width-150(type='text', name='deposit_customer_view', placeholder='search...', disabled = true)
     .form-group.col-md-3.col-sm-6.col-xs-12
       label.col-md-12.control-label
         | Code
@@ -21,8 +22,3 @@ form#deposit-form
         .input-icon.right
           input.form-control(type='text' name='deposit_description')
   #deposit-payment-region.row
-  .row.deposit-controls
-    .form-actions
-      .col-md-12.right
-        .col-md-12
-          button.btn.green(type='submit' name='submit_deposit') Create New Deposit
