--- a/assets/scripts/modules/rent-agreement/views/payment-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/payment-template.jade
@@ -1,13 +1,13 @@
 form-group.col-md-3.col-sm-6.col-xs-12
   label.col-md-12.control-label
-    | Amout
+    | Amount
     span.required(aria-required='true') *
   .col-md-12
     .input-group
       .input-icon.right
         i.fa.fa-info-circle.tooltips(data-original-title='Deposit Amount', data-container='body')
         input.form-control(type='text' name='deposit_amout')
-form-group.col-md-3.col-sm-6.col-xs-12
+//form-group.col-md-3.col-sm-6.col-xs-12
   label.col-md-12.control-label
     | invoice ID
     span.required(aria-required='true') *
