--- a/assets/scripts/modules/top-menu/layout-template.jade
+++ b/assets/scripts/modules/top-menu/layout-template.jade
@@ -2,7 +2,7 @@
 .page-header-inner
   // BEGIN LOGO
   .page-logo
-    a(href='index.html')
+    a(href='#')
       img.top-menu-logo(src="/img/city-logo-small-white1.png", alt='logo')
     .menu-toggler.sidebar-toggler.hide
   // END LOGO
