--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -137,3 +137,17 @@ span.select2-selection__arrow {
 .rent-agreement-row:hover {
   cursor: pointer;
 }
+
+//agreements list
+.agreement_status {
+  &.extended {
+    color: #3598dc;
+  }
+  &.new {
+    color: #26a69a;
+  }
+  &.closed {
+    color: #cb5a5e;
+  }
+}
+//agreements list
