Fixes: - rent agreement 	1) width of inputs now is uniform 	2) when user created, deposit user field shows [Object object] fix 	3) triggering fetch on rentals collection when new rental created - added gps tracking widget to dashboard - started gps tracking page with google map and stuff

--- a/assets/scripts/modules/dashboard/layout-template.jade
+++ b/assets/scripts/modules/dashboard/layout-template.jade
@@ -11,4 +11,8 @@
       #deposits-due
       #last-call-logs
     .col-md-12.col-lg-12.col-xs-12.col-sm-12
+      #gps-tracking
+    .col-md-12.col-lg-12.col-xs-12.col-sm-12
       #rental-dues
+#modal.modal.fade
+  .modal-dialog
