--- a/assets/scripts/modules/rent-agreement/views/templates/deposit-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/deposit-template.jade
@@ -5,8 +5,9 @@ form#deposit-form
         | Customer
         span.required(aria-required='true') *
       .col-md-12
-        input.form-control.width-150(type='hidden', name='deposit_customer', placeholder='search...')
-        input.form-control.width-150(type='text', name='deposit_customer_view', placeholder='search...', disabled = true)
+        .input-icon.right
+          input.form-control(type='hidden', name='deposit_customer', placeholder='search...')
+          input.form-control(type='text', name='deposit_customer_view', placeholder='search...', disabled = true)
     .form-group.col-md-3.col-sm-6.col-xs-12
       label.col-md-12.control-label
         | Code
