--- a/assets/scripts/modules/sidebar-menu/layout-template.jade
+++ b/assets/scripts/modules/sidebar-menu/layout-template.jade
@@ -68,4 +68,10 @@
           span.title Locations
           span.arrow
 
+      li
+        a(href='#gps-trackings')
+          i.fa.fa-compass
+          span.title GPS Trackings
+          span.arrow
+
     // END SIDEBAR MENU
