--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html(lang="en")
     link(rel="stylesheet", href="stylesheets/index.css")
 
     script(data-main='scripts/index.js' src='scripts/vendor/require.js')
+    script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2LWT54qamKDjAxTQAjJFYgWkYeW81tBg", type="text/javascript")
   body.page-header-fixed.page-quick-sidebar-over-content.page-sidebar-closed-hide-logo.page-container-bg-solid
     #top-menu-region.page-header.-i.navbar.navbar-fixed-top
     .clearfix
