gps tracking in process

--- a/assets/scripts/modules/rent-agreement/views/templates/list-toolbar-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/list-toolbar-template.jade
@@ -3,10 +3,11 @@
     a.btn.default.purple-stripe.input-inline.input-small.input-sm(href='#rent-agreement')
       i.fa.fa-plus
       span.hidden-480
-        | New Agreement
+        |  New Agreement
 .col-md-4.col-sm-12.no-right-padding
   .table-group-actions.pull-right
     input#rental-query.table-group-action-input.form-control.input-inline.input-small.input-sm(type='text', name='order_quantity_from')
+    | &nbsp;
     button#rental-search.btn.btn-sm.purple.filter-submit.margin-bottom
       i.fa.fa-search
       |  Search
