--- a/assets/scripts/modules/rent-agreement/views/templates/agreements-pagination-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/agreements-pagination-template.jade
@@ -1,5 +1,5 @@
 .pagination-panel
-  | Page
+  | Page&nbsp;
   a.btn.btn-sm.default.prev(href='#', title='Prev', class=prevStatus)
     i.fa.fa-angle-left
   input.pagination-panel-input.form-control.input-mini.input-inline.input-sm(type='text', maxlenght='5', style='text-align:center; margin: 0 5px;', value=currentPage)
