gps trackings visual improvements, car icons added, info window on click on car icon added

--- a/assets/scripts/modules/gps-trackings/layout-template.jade
+++ b/assets/scripts/modules/gps-trackings/layout-template.jade
@@ -1,6 +1,6 @@
 h1 GPS Trackings
-.row
+.row.gpstrackings-wrapper
   .col-md-2
-    #vehicles_region
+    #gps-tracking-vehicles_region
   .col-md-10
     #gmaps
