fixes to sidebar menu, not showing active on gps trackings

--- a/assets/scripts/modules/sidebar-menu/layout-template.jade
+++ b/assets/scripts/modules/sidebar-menu/layout-template.jade
@@ -68,8 +68,8 @@
           span.title Locations
           span.arrow
 
-      li
-        a(href='#gps-trackings')
+      li#gps-trackings
+        a(href='javascript:;')
           i.fa.fa-compass
           span.title GPS Trackings
           span.arrow
