--- a/assets/scripts/modules/sidebar-menu/layout-template.jade
+++ b/assets/scripts/modules/sidebar-menu/layout-template.jade
@@ -69,7 +69,7 @@
           span.arrow
 
       li#gps-trackings
-        a(href='javascript:;')
+        a(href='#gps-trackings')
           i.fa.fa-compass
           span.title GPS Trackings
           span.arrow
