--- a/assets/scripts/modules/top-menu/layout-template.jade
+++ b/assets/scripts/modules/top-menu/layout-template.jade
@@ -11,6 +11,7 @@
   // END RESPONSIVE MENU TOGGLER
   // BEGIN TOP NAVIGATION MENU
   .top-menu
+    img.loading(src="/img/loader.gif")
     ul.nav.navbar-nav.pull-right
       // DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte
       li.dropdown.dropdown-quick-sidebar-toggler
