--- a/assets/scripts/modules/dashboard/views/gps-tracking-modal-template.jade
+++ b/assets/scripts/modules/dashboard/views/gps-tracking-modal-template.jade
@@ -2,8 +2,4 @@
   .modal-header
     button.close(type='button', data-dismiss='modal', aria-hidden='true')
     h4.modal-title Track vehicle Location
-  .modal-body
-    | body goes here
-  .modal-footer
-    button.btn.default(type='button', data-dismiss='modal') Cancel
-    button.btn.blue.extend(type='button') Extend
+  .modal-body#map-view
