Improvements to gps tracking functions in dashboard - Refactored a bit "show on map" button look in dashboard gps trackings and active rentals - Added GPS tracking to active rentals in dashboard - Changed City field to Address field in gps trackings in dashboard

--- a/assets/scripts/modules/dashboard/views/gps-tracking-template.jade
+++ b/assets/scripts/modules/dashboard/views/gps-tracking-template.jade
@@ -5,9 +5,10 @@ td
 td
   = vehicle.get('plateNumber')
 td
-  = address.get('city')
+  = address.get('city') + ', ' + address.get('region') + ', ' + address.get('postalCode')
 td
   = moment(trackedOn).format("D MMMM YYYY")
 td
   if address.get('lat') && address.get('lon')
-    a.view-tracking(href="") Show on the Map
+    a.btn.default.btn-xs.blue.view-tracking(href="#" data-toggle="tooltip" title="Show vehicle position on the Map")
+      i.fa.fa-compass  Show on Map
