--- a/assets/scripts/modules/dashboard/views/rental-dues.jade
+++ b/assets/scripts/modules/dashboard/views/rental-dues.jade
@@ -12,3 +12,7 @@ td
   = vehicle.plateNumber
 td
   = vehicle.registrationDate
+td
+  if tracking.get('address').get('lat') && tracking.get('address').get('lon')
+    a.btn.default.btn-xs.blue.view-tracking(href="#" data-toggle="tooltip" title="Show vehicle position on the Map")
+      i.fa.fa-compass  Show on Map
