--- a/assets/scripts/modules/rent-agreement/views/templates/extend-rent-agreement-modal-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/extend-rent-agreement-modal-template.jade
@@ -12,7 +12,7 @@
           .input-group
             .input-icon.right
               i.fa.fa-info-circle.tooltips(data-original-title='End Fuel Level', data-container='body')
-              input.form-control(type='number', name='number-of-days', min="1", value="1")
+              input.form-control(type='number', name='number-of-days', min="1", value="1", max='14')
   .modal-footer
     button.btn.default(type='button', data-dismiss='modal') Cancel
     button.btn.blue.extend(type='button') Extend
