Rental Fixes/ Deposits in proggress 1) Fixed creating rent agreement (missing location field) 2) Fixed Closing and Extending agreement in rental list 3) Deposits list created (still in proggress)

--- a/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-template.jade
@@ -80,6 +80,13 @@
       .row
         .form-group.col-md-3.col-sm-6.col-xs-12
           label.col-md-12.control-label
+            | Location
+            span.required(aria-required='true') *
+          .col-md-12
+            .input-icon.right
+              select.form-control(type='text' name='location')
+        .form-group.col-md-3.col-sm-6.col-xs-12
+          label.col-md-12.control-label
             | Start mileage
             span.required(aria-required='true') *
           .col-md-12
