--- a/assets/scripts/modules/sidebar-menu/layout-template.jade
+++ b/assets/scripts/modules/sidebar-menu/layout-template.jade
@@ -57,8 +57,8 @@
             a(href='#vehicles')
               i.icon-bulb
               |              Vehicles
-      li
-        a(href='javascript:;')
+      li#deposits
+        a(href='#deposits')
           i.fa.fa-money
           span.title Deposits
           span.arrow
