--- a/assets/scripts/modules/sidebar-menu/layout-template.jade
+++ b/assets/scripts/modules/sidebar-menu/layout-template.jade
@@ -15,58 +15,31 @@
         // BEGIN SIDEBAR TOGGLER BUTTON
         .sidebar-toggler
         // END SIDEBAR TOGGLER BUTTON
-      li.start
-        a(href='javascript:;')
+      li#rent-agreements
+        a(href='#rent-agreements')
           i.fa.fa-file-text
           span.title Rent Agreement
           span.arrow
-        ul.sub-menu
-          li#rent-agreement
-            a(href='#rent-agreement')
-              i.icon-bar-chart
-              | 							Rent Agreement
-          li#rent-agreements
-            a(href='#rent-agreements')
-              i.icon-bulb
-              | 							Rent Agreements
-      li
-        a(href='javascript:;')
+      li#customers
+        a(href='#customers')
           i.fa.fa-users
           span.title Customers
           span.arrow
-        ul.sub-menu
-          li#customer
-            a(href='#customer')
-              i.icon-bar-chart
-              |               Customer
-          li#customers
-            a(href='#customers')
-              i.icon-bulb
-              |               Customers
-      li
-        a(href='javascript:;')
+      li#vehicles
+        a(href='#vehicles')
           i.fa.fa-car
           span.title Vehicles
           span.arrow
-        ul.sub-menu
-          li#vehicle
-            a(href='#vehicle')
-              i.icon-bar-chart
-              |              Vehicle
-          li#vehicles
-            a(href='#vehicles')
-              i.icon-bulb
-              |              Vehicles
       li#deposits
         a(href='#deposits')
           i.fa.fa-money
           span.title Deposits
           span.arrow
-      li
-        a(href='javascript:;')
-          i.fa.fa-map-marker
-          span.title Locations
-          span.arrow
+      //li
+      //  a(href='javascript:;')
+      //    i.fa.fa-map-marker
+      //    span.title Locations
+      //    span.arrow
 
       li#gps-trackings
         a(href='#gps-trackings')
