vehicle creation fixed

--- a/assets/scripts/modules/customers/views/customer-template.jade
+++ b/assets/scripts/modules/customers/views/customer-template.jade
@@ -61,6 +61,7 @@ form#customer-form
     .form-group.col-md-3.col-sm-6.col-xs-12
       label.col-md-12.control-label
         | Email
+        span.required(aria-required='true') *
       .col-md-12
         .input-group
           span.input-group-addon
