Fixes to Customers/Vehicles/Deposits/Rent Agreement: - Moved customer list to pagination on api side - customer search is done by api now - customer form Region renamed to State and all states added - representation of deleted, non active items changed in tables, more stylish - notifications are sent to customer and depost modules when items created in rental - minor fixes here and there

--- a/assets/scripts/modules/customers/views/templates/address-template.jade
+++ b/assets/scripts/modules/customers/views/templates/address-template.jade
@@ -30,18 +30,13 @@
       span.required(aria-required='true') *
     .col-md-12
       select.form-control(name='country')
-        option(value='') Select...
         option(value='USA') USA
-        option(value='Canada') Canada
   .form-group.col-md-6.col-sm-6.col-xs-12
     label.control-label.col-md-12
-      | Region
+      | State
       span.required(aria-required='true') *
     .col-md-12
       select.form-control(name='region')
-        option(value='') Select...
-        option(value='NY') NY
-        option(value='FL') FL
   .form-group.col-md-6.col-sm-6.col-xs-12
     label.col-md-12.control-label
       | Postal Code
