Notes added to customers and rentals, fixes: 1) changed dates format to us 2) added notes to customer(working) and rentals(should be working, when bug is fixed) 3) initially for speeding up the work of the app, i made it fetch the collections only first time it loads page, so now there is a manual refresh if you#

--- a/assets/scripts/modules/customers/views/templates/customer-row-template.jade
+++ b/assets/scripts/modules/customers/views/templates/customer-row-template.jade
@@ -11,6 +11,8 @@ td
     span(class="#{contactStatus.toLowerCase()} item_status")
       = contactStatus
 td.actions
+  a.btn.default.btn-xs.purple.notes-row(href="#" data-toggle="tooltip" title="Customer2 Notes")
+    i.fa.fa-comments-o
   if contactStatus != "DELETED"
     a.btn.default.btn-xs.red.delete-row(href="javascript:;" data-toggle="tooltip" title="Delete Customer")
       i.fa.fa-trash-o
