--- a/assets/scripts/modules/deposits/views/templates/deposits-list-template.jade
+++ b/assets/scripts/modules/deposits/views/templates/deposits-list-template.jade
@@ -1,3 +1,7 @@
+#toolbar
+  .actions
+    button#list-refresh.btn.btn-sm.purple.filter-submit.margin-bottom
+      i.fa.fa-refresh
 #table
 .pagination-panel.right
   | Page&nbsp;
