--- a/assets/scripts/modules/gps-trackings/views/templates/gmap-infowindow-template.jade
+++ b/assets/scripts/modules/gps-trackings/views/templates/gmap-infowindow-template.jade
@@ -17,6 +17,6 @@ p
 p
   b Tracked On:
   span.margin-left-5px
-    = moment(trackedOn).format('DD MMM YYYY')
+    = moment(trackedOn).format(App.DataHelper.dateFormats.us)
 
 
