--- a/assets/scripts/modules/customers/views/templates/customers-toolbar-template.jade
+++ b/assets/scripts/modules/customers/views/templates/customers-toolbar-template.jade
@@ -1,5 +1,7 @@
 .col-md-8.col-sm-12.no-left-padding
   .actions
+    button#list-refresh.btn.btn-sm.purple.filter-submit.margin-bottom
+      i.fa.fa-refresh
     a.btn.default.purple-stripe.input-inline.input-small.input-sm(href='#customer')
       i.fa.fa-plus
       span.hidden-480
