--- a/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-row-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-row-template.jade
@@ -9,17 +9,19 @@ td
 td
   = days
 td
-  = moment(dueDate).format('DD/MM/YYYY')
+  = moment(dueDate).format(App.DataHelper.dateFormats.us)
 td
   = total
 td
   span(class="#{status.toLowerCase()} agreement_status")
     = status
 td
-  a.btn.default.btn-xs.green.download-row(href="#{externalDocUrl}" data-toggle="tooltip" title="Download")
+  a.btn.default.btn-xs.green.download-row(href="#{externalDocUrl}" data-toggle="tooltip" title="Download PDF version of agreement")
     i.fa.fa-download
+  a.btn.default.btn-xs.purple.notes-row(href="#" data-toggle="tooltip" title="Agreement Notes")
+    i.fa.fa-comments-o
   if status.toLowerCase() !== "closed"
     a.btn.default.btn-xs.blue.extend-row(href="#" data-toggle="tooltip" title="Extend rent agreement")
-      i.fa.fa-angle-double-right  Extend
+      i.fa.fa-angle-double-right
     a.btn.default.btn-xs.red.close-row(href="#" data-toggle="tooltip" title="Close rent agreement")
-      i.fa.fa-times  Close
+      i.fa.fa-times
