fixes to vehicles creation

--- a/assets/scripts/modules/vehicles/views/templates/vehicle-template.jade
+++ b/assets/scripts/modules/vehicles/views/templates/vehicle-template.jade
@@ -88,13 +88,13 @@ form#vehicle-form
         .input-icon.right
           i.fa.fa-info-circle.tooltips(data-original-title='Weekly rate', data-container='body')
           input.form-control(type='text' name='weekly_rate')
-    //.form-group.col-md-3.col-sm-6.col-xs-12
-    //  label.col-md-12.control-label
-    //    | Code
-    //  .col-md-12
-    //    .input-icon.right
-    //      i.fa.fa-info-circle.tooltips(data-original-title='Code', data-container='body')
-    //      input.form-control(type='text' name='code')
+    .form-group.col-md-3.col-sm-6.col-xs-12
+      label.col-md-12.control-label
+        | Last Oil Change Mileage
+      .col-md-12
+        .input-icon.right
+          i.fa.fa-info-circle.tooltips(data-original-title='Code', data-container='body')
+          input.form-control(type='text' name='last_oil_change')
     .form-group.col-md-3.col-sm-6.col-xs-12
       label.col-md-12.control-label
         | Location
