fix dual modals in active rentals issue

--- a/assets/scripts/modules/dashboard/layout-template.jade
+++ b/assets/scripts/modules/dashboard/layout-template.jade
@@ -14,4 +14,5 @@
       #gps-tracking
     .col-md-12.col-lg-12.col-xs-12.col-sm-12
       #rental-dues
-#modal.modal.fade
+#modal.modal.fade(tabindex="-2", style="z-index:10060")
+#modal2.modal.fade(tabindex="-1")
