--- a/assets/stylesheets/metronic/global/plugins/_bootstrap-datetimepicker.scss
+++ b/assets/stylesheets/metronic/global/plugins/_bootstrap-datetimepicker.scss
@@ -1,248 +1,319 @@
 /*!
  * Datetimepicker for Bootstrap v3
- * Modified to use SASS instead of LESS
- * https://github.com/soundasleep/bootstrap-datetimepicker-sass
- * based off https://github.com/Eonasdan/bootstrap-datetimepicker/
- * Copyright 2012 Stefan Petre
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- */
-.bootstrap-datetimepicker-widget
-{
+//! version : 3.1.3
+ * https://github.com/Eonasdan/bootstrap-datetimepicker/
+*/
+
+//colors
+$color_celeste_approx: #ccc;
+$black_20: rgba(0,0,0,.2);
+$white: #fff;
+$color_tapa_approx: #777;
+$color_gallery_approx: #eee;
+$color_boston_blue_approx: #428bca;
+$black_25: rgba(0,0,0,.25);
+
+//@extend-elements
+//original selectors
+//.bootstrap-datetimepicker-widget .timepicker-hour, .bootstrap-datetimepicker-widget .timepicker-minute, .bootstrap-datetimepicker-widget .timepicker-second
+%extend_1 {
+  width: 54px;
+  font-weight: 700;
+  font-size: 1.2em;
+  margin: 0;
+}
+
+//original selectors
+//.bootstrap-datetimepicker-widget td.active, .bootstrap-datetimepicker-widget td.active:hover
+%extend_2 {
+  background-color: $color_boston_blue_approx;
+  color: $white;
+  //Instead of the line below you could use @includetext-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
+  text-shadow: 0 -1px 0 $black_25;
+}
+
+//original selectors
+//.bootstrap-datetimepicker-widget td.disabled, .bootstrap-datetimepicker-widget td.disabled:hover
+%extend_3 {
+  background: 0 0;
+  color: $color_tapa_approx;
+  cursor: not-allowed;
+}
+
+//original selectors
+//.bootstrap-datetimepicker-widget td span.disabled, .bootstrap-datetimepicker-widget td span.disabled:hover
+%extend_4 {
+  background: 0 0;
+  color: $color_tapa_approx;
+  cursor: not-allowed;
+}
+
+//original selectors
+//.bootstrap-datetimepicker-widget th.disabled, .bootstrap-datetimepicker-widget th.disabled:hover
+%extend_5 {
+  background: 0 0;
+  color: $color_tapa_approx;
+  cursor: not-allowed;
+}
+
+
+.bootstrap-datetimepicker-widget {
   top: 0;
   left: 0;
   width: 250px;
   padding: 4px;
   margin-top: 1px;
-  z-index: 99999;
+  z-index: 99999!important;
+  //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
   border-radius: 4px;
-
-  .btn {
-    padding:6px;
+  &.timepicker-sbs {
+    width: 600px;
   }
-
-  &:before
-  {
-    content: '';
-    display: inline-block;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-bottom: 7px solid #ccc;
-    border-bottom-color: rgba(0,0,0,.2);
-    position: absolute;
-    top: -7px;
-    left: 6px;
+  &.bottom {
+    &:before {
+      content: '';
+      display: inline-block;
+      border-left: 7px solid transparent;
+      border-right: 7px solid transparent;
+      border-bottom: 7px solid $color_celeste_approx;
+      border-bottom-color: $black_20;
+      position: absolute;
+      top: -7px;
+      left: 7px;
+    }
+    &:after {
+      content: '';
+      display: inline-block;
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-bottom: 6px solid $white;
+      position: absolute;
+      top: -6px;
+      left: 8px;
+    }
   }
-
-  &:after
-  {
-    content: '';
-    display: inline-block;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-bottom: 6px solid white;
-    position: absolute;
-    top: -6px;
-    left: 7px;
+  &.top {
+    &:before {
+      content: '';
+      display: inline-block;
+      border-left: 7px solid transparent;
+      border-right: 7px solid transparent;
+      border-top: 7px solid $color_celeste_approx;
+      border-top-color: $black_20;
+      position: absolute;
+      bottom: -7px;
+      left: 6px;
+    }
+    &:after {
+      content: '';
+      display: inline-block;
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-top: 6px solid $white;
+      position: absolute;
+      bottom: -6px;
+      left: 7px;
+    }
   }
-
-  &.pull-right
-  {
-    &:before
-    {
+  .dow {
+    width: 14.2857%;
+  }
+  &.pull-right {
+    &:before {
       left: auto;
       right: 6px;
     }
-
-    &:after
-    {
+    &:after {
       left: auto;
       right: 7px;
     }
   }
-
-  >ul
-  {
-    list-style-type: none;
+  a[data-action] {
+    padding: 6px 0;
+    &:active {
+      //Instead of the line below you could use @includebox-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
+      box-shadow: none;
+    }
+  }
+  .timepicker-hour {
+    @extend %extend_1;
+  }
+  .timepicker-minute {
+    @extend %extend_1;
+  }
+  .timepicker-second {
+    @extend %extend_1;
+  }
+  button[data-action] {
+    padding: 6px;
+  }
+  .datepicker>div {
+    display: none;
+  }
+  .picker-switch {
+    text-align: center;
+  }
+  table {
+    width: 100%;
     margin: 0;
   }
-
-  .timepicker-hour, .timepicker-minute, .timepicker-second
-  {
-    width: 100%;
-    font-weight: bold;
-    font-size: 1.2em;
+  td {
+    text-align: center;
+    //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
+    border-radius: 4px;
+    height: 54px;
+    line-height: 54px;
+    width: 54px;
+    &.cw {
+      font-size: 10px;
+      height: 20px;
+      line-height: 20px;
+      color: $color_tapa_approx;
+    }
+    &.day {
+      height: 20px;
+      line-height: 20px;
+      width: 20px;
+      &:hover {
+        background: $color_gallery_approx;
+        cursor: pointer;
+      }
+    }
+    &.old {
+      color: $color_tapa_approx;
+    }
+    &.new {
+      color: $color_tapa_approx;
+    }
+    &.today {
+      position: relative;
+      &:before {
+        content: '';
+        display: inline-block;
+        border-left: 7px solid transparent;
+        border-bottom: 7px solid $color_boston_blue_approx;
+        border-top-color: $black_20;
+        position: absolute;
+        bottom: 4px;
+        right: 4px;
+      }
+    }
+    &.active {
+      @extend %extend_2;
+      &:hover {
+        @extend %extend_2;
+      }
+      &.today:before {
+        border-bottom-color: $white;
+      }
+    }
+    &.disabled {
+      @extend %extend_3;
+      &:hover {
+        @extend %extend_3;
+      }
+    }
+    span {
+      display: inline-block;
+      width: 54px;
+      height: 54px;
+      line-height: 54px;
+      margin: 2px 1.5px;
+      cursor: pointer;
+      //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
+      border-radius: 4px;
+      &:hover {
+        background: $color_gallery_approx;
+      }
+      &.active {
+        background-color: $color_boston_blue_approx;
+        color: $white;
+        //Instead of the line below you could use @includetext-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
+        text-shadow: 0 -1px 0 $black_25;
+      }
+      &.old {
+        color: $color_tapa_approx;
+      }
+      &.disabled {
+        @extend %extend_4;
+        &:hover {
+          @extend %extend_4;
+        }
+      }
+    }
+    &.hour:hover {
+      background: $color_gallery_approx;
+      cursor: pointer;
+    }
+    &.minute:hover {
+      background: $color_gallery_approx;
+      cursor: pointer;
+    }
+    &.second:hover {
+      background: $color_gallery_approx;
+      cursor: pointer;
+    }
   }
-
-  table[data-hour-format="12"] .separator
-  {
+  th {
+    text-align: center;
+    //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
+    border-radius: 4px;
+    height: 20px;
+    line-height: 20px;
+    width: 20px;
+    &.picker-switch {
+      width: 145px;
+    }
+    &.next {
+      font-size: 21px;
+    }
+    &.prev {
+      font-size: 21px;
+    }
+    &.disabled {
+      @extend %extend_5;
+      &:hover {
+        @extend %extend_5;
+      }
+    }
+  }
+  &.left-oriented {
+    &:before {
+      left: auto;
+      right: 6px;
+    }
+    &:after {
+      left: auto;
+      right: 7px;
+    }
+  }
+  table[data-hour-format="12"] .separator {
     width: 4px;
     padding: 0;
     margin: 0;
   }
-
-  .datepicker > div
-  {
-    display: none;
-  }
-
-  .picker-switch
-  {
-    text-align: center;
-  }
-
-  table
-  {
-    width: 100%;
-    margin: 0;
-  }
-
-  td,
-  th
-  {
-    text-align: center;
-    width: 20px;
-    height: 20px;
-    border-radius: 4px;
-  }
-
-  td
-  {
-    &.day:hover,
-    &.hour:hover,
-    &.minute:hover,
-    &.second:hover
-    {
-      background: $gray-lighter;
-      cursor: pointer;
-    }
-
-    &.old,
-    &.new
-    {
-      color: $gray-light;
-    }
-
-    &.active,
-    &.active:hover
-    {
-      background-color: $btn-primary-bg;
-      color: #fff;
-      text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-    }
-
-    &.disabled,
-    &.disabled:hover
-    {
-      background: none;
-      color: $gray-light;
-      cursor: not-allowed;
-    }
-
-    span
-    {
-      display: block;
-      width: 47px;
-      height: 54px;
-      line-height: 54px;
-      float: left;
-      margin: 2px;
-      cursor: pointer;
-      border-radius: 4px;
-
-      &:hover
-      {
-        background: $gray-lighter;
-      }
-
-      &.active
-      {
-        background-color: $btn-primary-bg;
-        color: #fff;
-        text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-      }
-
-      &.old
-      {
-        color: $gray-light;
-      }
-
-      &.disabled,
-      &.disabled:hover
-      {
-        background: none;
-        color: $gray-light;
-        cursor: not-allowed;
-      }
-    }
-  }
-
-  th
-  {
-    &.switch
-    {
-      width: 145px;
-    }
-
-    &.next,
-    &.prev
-    {
-      font-size: $font-size-base * 1.5;
-    }
-
-    &.disabled,
-    &.disabled:hover
-    {
-      background: none;
-      color: $gray-light;
-      cursor: not-allowed;
-    }
-  }
-
-  thead tr:first-child th
-  {
+  thead tr:first-child th {
     cursor: pointer;
-
-    &:hover
-    {
-      background: $gray-lighter;
+    &:hover {
+      background: $color_gallery_approx;
     }
   }
-  /*.dow {
-border-top: 1px solid #ddd !important;
-}*/
-}
-
-.input-group
-{
-  &.date
-  {
-    .input-group-addon span
-    {
-      display: block;
-      cursor: pointer;
-      width: 16px;
-      height: 16px;
-    }
+  ul.list-unstyled li div.timepicker div.timepicker-picker table.table-condensed tbody>tr>td {
+    padding: 0!important;
   }
 }
-
-.bootstrap-datetimepicker-widget.left-oriented
-{
-  &:before
-  {
-    left: auto;
-    right: 6px;
-  }
-
-  &:after
-  {
-    left: auto;
-    right: 7px;
-  }
+.bootstrap-datetimepicker-widget>ul {
+  list-style-type: none;
+  margin: 0;
 }
-.bootstrap-datetimepicker-widget ul.list-unstyled li.in div.timepicker div.timepicker-picker table.table-condensed tbody > tr > td
-{
-  padding: 0px !important;
+@media screen and(max-width:767px) {
+.bootstrap-datetimepicker-widget.timepicker-sbs {
+  width: 283px;
+}
+}
+.input-group.date .input-group-addon span {
+  display: block;
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
 }
