validation configured, added validation to vehicle form

--- a/assets/scripts/modules/rent-agreement/views/templates/vehicle-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/vehicle-template.jade
@@ -14,7 +14,7 @@ form#vehicle-form
       .col-md-12
         .input-icon.right
           i.fa.fa-info-circle.tooltips(data-original-title='Vehicle Color', data-container='body')
-          input.form-control(type='text' name='vehicle_color')
+          input.form-control.datepicker-binded(type='text' name='vehicle_color')
     .form-group.col-md-3.col-sm-6.col-xs-12
       label.col-md-12.control-label
         | Plate Number
