Fixes to Active Rentals in Dashboard - Sorting added by Due date, plus "due today" are in the top of the list - Added due date column, renamed widget to "Active Rentals" . Fixes #71

--- a/assets/scripts/modules/dashboard/views/templates/rental-dues.jade
+++ b/assets/scripts/modules/dashboard/views/templates/rental-dues.jade
@@ -13,6 +13,8 @@ td
 td
   = startDate ? moment(startDate).format(App.DataHelper.dateFormats.us): ""
 td
+  = dueDate ? moment(dueDate).format(App.DataHelper.dateFormats.us): ""
+td
   if gpsTrackings.length
     a.btn.default.btn-xs.blue.view-tracking(href="#" data-toggle="tooltip" title="Show vehicle movements")
       i.fa.fa-compass  Show vehicle movements
