massive changes to dashboard active rentals and rentals list, several fixes

--- a/assets/scripts/modules/dashboard/views/templates/utilization.jade
+++ b/assets/scripts/modules/dashboard/views/templates/utilization.jade
@@ -4,6 +4,6 @@
             i.fa(class="#{icon}")
             = title
         .tools
-            a.collapse.collapser(href='javascript:;', data-original-title='', title='')
-    .portlet-body
+            a.expand.collapser(href='javascript:;', data-original-title='', title='')
+    .portlet-body.display-hide
         #utilization-chart-container
