--- a/assets/scripts/modules/rent-agreement/views/templates/rent-agreements-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rent-agreements-template.jade
@@ -7,3 +7,8 @@
             span
               b= item
     tbody.row-container
+#modal-rental-movements.modal.fade
+  .modal-dialog
+#modal-gps-trackings.modal.fade
+  .modal-dialog
+
