--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -200,8 +200,6 @@ span.select2-selection__arrow {
 
 .new-item-datatables {
   float: left;
-//  height: 34px;
-//  padding-top: 8px;
   margin-right: 5px;
 }
 
@@ -211,7 +209,7 @@ tr.deleted {
 }
 
 .due-today {
-  background-color: #fcf8e3;
+  background-color: #FAEA92;
 }
 
 tr.clickable  {
