--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,4 +17,8 @@ html(lang="en")
         .page-content
           #main-region
     .page-footer
+    #modal-global-1.modal.fade
+      .modal-dialog
+    #modal-global-2.modal.fade
+      .modal-dialog
     #login-region
