--- a/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-row-template.jade
+++ b/assets/scripts/modules/rent-agreement/views/templates/rent-agreement-row-template.jade
@@ -30,6 +30,9 @@ if actionsEnabled
       i.fa.fa-download
     a.btn.default.btn-xs.purple.notes-row(href="#" data-toggle="tooltip" title="Agreement Notes")
       i.fa.fa-comments-o
+    if gpsTrackings.length
+      a.btn.default.btn-xs.blue.view-tracking(href="#" data-toggle="tooltip" title="Show vehicle movements")
+        i.fa.fa-compass
     if status.toLowerCase() !== "closed"
       a.btn.default.btn-xs.blue.extend-row(href="#" data-toggle="tooltip" title="Extend rent agreement")
         i.fa.fa-angle-double-right
